# vibing

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.md  com.vibing.audio-recorder.plist.template  config.json  pyproject.toml  recorder.py  requirements.txt
scripts/: process.py  recorder.py
tests/: conftest.py  test_recorder.py
