[project]
name = "vibing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "faster-whisper>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=7.4.0",
    "scipy-stubs>=1.17.1.5",
]

[tool.uv]
package = false


[tool.ruff]
line-length = 99
target-version = "py311"
extend-exclude = [".claude"]


[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RET", "S"]
ignore = ["E501", "B008", "S101"]


[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = "^\\.claude/"

[[tool.mypy.overrides]]
module = ["sounddevice.*", "faster_whisper.*"]
ignore_missing_imports = true
